--- a/templates/haproxy.cfg.j2
+++ b/templates/haproxy.cfg.j2
@@ -1,56 +1,53 @@
 global
-  log /dev/log  local0
-  log /dev/log  local1 notice
-{% if haproxy_socket != '' %}
-  stats socket {{ haproxy_socket }} level admin
-{% endif %}
-{% if haproxy_chroot != '' %}
-  chroot {{ haproxy_chroot }}
-{% endif %}
-  user {{ haproxy_user }}
-  group {{ haproxy_group }}
-  daemon
-{% for global_var in haproxy_global_vars %}
-  {{ global_var }}
-{% endfor %}
+
+  {% if haproxy.logs is defined %}
+  {% for log in haproxy.logs %}
+  log {{ log }}
+  {% endfor %}
+  {% endif %}
+
+  {% for key, value in haproxy.global.items() %}
+  {{ key }} {{ value }}
+  {% endfor %}
 
 defaults
-  log global
-  mode  http
-  option  httplog
-  option  dontlognull
-{% if haproxy_version == '1.4' %}
-        contimeout 5000
-        clitimeout 50000
-        srvtimeout 50000
-{% else %}
-        timeout connect 5000
-        timeout client 50000
-        timeout server 50000
-{% endif %}
-{% if ansible_os_family == 'Debian' %}
-  errorfile 400 /etc/haproxy/errors/400.http
-  errorfile 403 /etc/haproxy/errors/403.http
-  errorfile 408 /etc/haproxy/errors/408.http
-  errorfile 500 /etc/haproxy/errors/500.http
-  errorfile 502 /etc/haproxy/errors/502.http
-  errorfile 503 /etc/haproxy/errors/503.http
-  errorfile 504 /etc/haproxy/errors/504.http
-{% endif %}
 
-frontend {{ haproxy_frontend_name }}
-    bind {{ haproxy_frontend_bind_address }}:{{ haproxy_frontend_port }}
-    mode {{ haproxy_frontend_mode }}
-    default_backend {{ haproxy_backend_name }}
+  {% for key, value in haproxy.defaults.items() %}
+  {{ key }} {{ value }}
+  {% endfor %}
 
-backend {{ haproxy_backend_name }}
-    mode {{ haproxy_backend_mode }}
-    balance {{ haproxy_backend_balance_method }}
-    option forwardfor
-{% if haproxy_backend_httpchk != '' %}
-    option httpchk {{ haproxy_backend_httpchk }}
-{% endif %}
-    cookie SERVERID insert indirect
-{% for backend in haproxy_backend_servers %}
-    server {{ backend.name }} {{ backend.address }} cookie {{ backend.name }} check
+  {% for key, value in haproxy.timeout.items() %}
+  {{ key }} {{ value }}
+  {% endfor %}
+
+  {% for frontend in haproxy.frontend %}
+  frontend {{ frontend }}
+  {% for key, value in frontend.items() %}
+    {{ key }} {{ value }}
+  {% endfor %}
+  {% endfor %}
+
+  {% for backend in haproxy.backend %}
+  backend {{ backend }}
+  {% for key, value in backend.items() %}
+    {% if value.items() is defined %}
+    {% for option in haproxy.backend[key] %}
+    {{ key }} {{ option }}
+    {% endfor %}
+    {% else %}
+    {{ key }} {{ value }}
+    {% endif %}
+  {% endfor %}
+  {% endfor %}
+
+{% for listener in haproxy.listen %}
+  listen {{ listener }}
+  {% for key, value in listener.items() %}
+  {% if value.items() is defined %}
+  {% for property, attribute in value.items() %}
+      {{ property }} {{ attribute }}
+  {% endfor %}
+  {% else %}
+      {{ key }} {{ value }}
+  {% endif %}
 {% endfor %}
