misc: More amendments

--- a/templates/haproxy.cfg.j2
+++ b/templates/haproxy.cfg.j2
@@ -16,6 +16,7 @@ defaults
   {% if key == 'option' %}
   {% for option, attribute in value %}
     option {{ option }} {{ attribute }}
+  {% endfor %}
   {% else %}
     {{ key }} {{ value }}
   {% endif %}
